--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\manch\\AppData\\Roaming\\NetBeans\\18\\build.properties
+user.properties.file=/Users/jesusventura/Library/Application Support/NetBeans/24/build.properties
