--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=os_project1
+application.vendor=jesusventura
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,10 +33,21 @@ dist.jar=${dist.dir}/os_project1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/os_project1
+endorsed.classpath=
 excludes=
+file.reference.hamcrest-core-1.3.jar=/Users/jesusventura/Desktop/jfreechart-1.0.19/lib/hamcrest-core-1.3.jar
+file.reference.jcommon-1.0.23.jar=/Users/jesusventura/Desktop/jfreechart-1.0.19/lib/jcommon-1.0.23.jar
+file.reference.jfreechart-1.0.19-experimental.jar=/Users/jesusventura/Desktop/jfreechart-1.0.19/lib/jfreechart-1.0.19-experimental.jar
+file.reference.jfreechart-1.0.19-swt.jar=/Users/jesusventura/Desktop/jfreechart-1.0.19/lib/jfreechart-1.0.19-swt.jar
+file.reference.jfreechart-1.0.19.jar=/Users/jesusventura/Desktop/jfreechart-1.0.19/lib/jfreechart-1.0.19.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.hamcrest-core-1.3.jar}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jfreechart-1.0.19-experimental.jar}:\
+    ${file.reference.jfreechart-1.0.19-swt.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
