--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,11 +35,17 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/os_project1
 endorsed.classpath=
 excludes=
-file.reference.hamcrest-core-1.3.jar=/Users/jesusventura/Desktop/jfreechart-1.0.19/lib/hamcrest-core-1.3.jar
-file.reference.jcommon-1.0.23.jar=/Users/jesusventura/Desktop/jfreechart-1.0.19/lib/jcommon-1.0.23.jar
-file.reference.jfreechart-1.0.19-experimental.jar=/Users/jesusventura/Desktop/jfreechart-1.0.19/lib/jfreechart-1.0.19-experimental.jar
-file.reference.jfreechart-1.0.19-swt.jar=/Users/jesusventura/Desktop/jfreechart-1.0.19/lib/jfreechart-1.0.19-swt.jar
-file.reference.jfreechart-1.0.19.jar=/Users/jesusventura/Desktop/jfreechart-1.0.19/lib/jfreechart-1.0.19.jar
+file.reference.hamcrest-core-1.3.jar=C:\\Users\\manch\\Downloads\\libreria\\libreria\\hamcrest-core-1.3.jar
+file.reference.jcommon-1.0.23.jar=C:\\Users\\manch\\Downloads\\libreria\\libreria\\jcommon-1.0.23.jar
+file.reference.jfreechart-1.0.19-experimental.jar=C:\\Users\\manch\\Downloads\\libreria\\libreria\\jfreechart-1.0.19-experimental.jar
+file.reference.jfreechart-1.0.19-swt.jar=C:\\Users\\manch\\Downloads\\libreria\\libreria\\jfreechart-1.0.19-swt.jar
+file.reference.jfreechart-1.0.19.jar=C:\\Users\\manch\\Downloads\\libreria\\libreria\\jfreechart-1.0.19.jar
+file.reference.jfreesvg-2.0.jar=C:\\Users\\manch\\Downloads\\libreria\\libreria\\jfreesvg-2.0.jar
+file.reference.junit-4.11.jar=C:\\Users\\manch\\Downloads\\libreria\\libreria\\junit-4.11.jar
+file.reference.orsoncharts-1.4-eval-nofx.jar=C:\\Users\\manch\\Downloads\\libreria\\libreria\\orsoncharts-1.4-eval-nofx.jar
+file.reference.orsonpdf-1.6-eval.jar=C:\\Users\\manch\\Downloads\\libreria\\libreria\\orsonpdf-1.6-eval.jar
+file.reference.servlet.jar=C:\\Users\\manch\\Downloads\\libreria\\libreria\\servlet.jar
+file.reference.swtgraphics2d.jar=C:\\Users\\manch\\Downloads\\libreria\\libreria\\swtgraphics2d.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -47,7 +53,13 @@ javac.classpath=\
     ${file.reference.jcommon-1.0.23.jar}:\
     ${file.reference.jfreechart-1.0.19-experimental.jar}:\
     ${file.reference.jfreechart-1.0.19-swt.jar}:\
-    ${file.reference.jfreechart-1.0.19.jar}
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.jfreesvg-2.0.jar}:\
+    ${file.reference.junit-4.11.jar}:\
+    ${file.reference.orsoncharts-1.4-eval-nofx.jar}:\
+    ${file.reference.orsonpdf-1.6-eval.jar}:\
+    ${file.reference.servlet.jar}:\
+    ${file.reference.swtgraphics2d.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
