feat: funcionalidades de las tablas y arreglos menores.

--- a/Configuracion.json
+++ b/Configuracion.json
@@ -1,13 +1,35 @@
 {
-  "procesosCreados": 10,
+  "procesosCreados": 11,
   "cantidadCpus": 2,
-  "velocidadReloj": 3000,
+  "velocidadReloj": 1000,
   "planificador": "FCFS",
   "procesos_listos": [
     {
+      "id": 1,
+      "nombre": "P1",
+      "totalInstructions": 10,
+      "status": "RUNNING",
+      "programCounter": 0,
+      "cpuBound": true,
+      "ioBound": false,
+      "ciclosExcepcion": 0,
+      "ciclosIO": 0
+    },
+    {
+      "id": 2,
+      "nombre": "P2",
+      "totalInstructions": 10,
+      "status": "RUNNING",
+      "programCounter": 0,
+      "cpuBound": true,
+      "ioBound": false,
+      "ciclosExcepcion": 0,
+      "ciclosIO": 0
+    },
+    {
       "id": 3,
       "nombre": "P3",
-      "totalInstructions": 30,
+      "totalInstructions": 10,
       "status": "READY",
       "programCounter": 0,
       "cpuBound": true,
@@ -18,7 +40,7 @@
     {
       "id": 4,
       "nombre": "P4",
-      "totalInstructions": 30,
+      "totalInstructions": 10,
       "status": "READY",
       "programCounter": 0,
       "cpuBound": true,
@@ -29,7 +51,7 @@
     {
       "id": 5,
       "nombre": "P5",
-      "totalInstructions": 30,
+      "totalInstructions": 10,
       "status": "READY",
       "programCounter": 0,
       "cpuBound": true,
@@ -40,7 +62,7 @@
     {
       "id": 6,
       "nombre": "P6",
-      "totalInstructions": 30,
+      "totalInstructions": 10,
       "status": "READY",
       "programCounter": 0,
       "cpuBound": true,
@@ -51,7 +73,7 @@
     {
       "id": 7,
       "nombre": "P7",
-      "totalInstructions": 30,
+      "totalInstructions": 10,
       "status": "READY",
       "programCounter": 0,
       "cpuBound": true,
@@ -62,7 +84,7 @@
     {
       "id": 8,
       "nombre": "P8",
-      "totalInstructions": 30,
+      "totalInstructions": 10,
       "status": "READY",
       "programCounter": 0,
       "cpuBound": true,
@@ -73,7 +95,18 @@
     {
       "id": 9,
       "nombre": "P9",
-      "totalInstructions": 30,
+      "totalInstructions": 10,
+      "status": "READY",
+      "programCounter": 0,
+      "cpuBound": true,
+      "ioBound": false,
+      "ciclosExcepcion": 0,
+      "ciclosIO": 0
+    },
+    {
+      "id": 10,
+      "nombre": "P10",
+      "totalInstructions": 10,
       "status": "READY",
       "programCounter": 0,
       "cpuBound": true,
